--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-visibility-sensor": "^4.1.0",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-form": "^7.3.0",
