--- a/analytics/requirements.txt
+++ b/analytics/requirements.txt
@@ -1,41 +1,2 @@
-CacheControl==0.12.5
-cachetools==2.1.0
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-Django==1.10.1
-django-tinymce==2.4.0
-enum34==1.1.6
-firebase-admin==2.12.0
-Flask==1.0.2
-futures==3.2.0
-google-api-core==1.3.0
-google-api-python-client==1.7.4
-google-auth==1.5.0
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.2.0
-google-cloud-core==0.28.1
-google-cloud-firestore==0.29.0
-google-cloud-storage==1.10.0
-google-resumable-media==0.3.1
-googleapis-common-protos==1.5.3
-grpcio==1.13.0
-httplib2==0.11.3
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-msgpack==0.5.6
-oauthlib==2.1.0
-protobuf==3.6.0
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pytz==2018.5
-requests==2.19.1
-requests-oauthlib==1.0.0
-rsa==3.4.2
-six==1.11.0
-uritemplate==3.0.0
-urllib3==1.23
-Werkzeug==0.14.1
-zc.buildout==2.5.3
+google-api-python-client
+firebase-admin
