--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "firebase": "^5.5.1",
     "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
@@ -48,6 +49,7 @@
     "redux-promise": "^0.5.3",
     "redux-responsive": "^4.3.5",
     "redux-saga": "^0.15.6",
+    "slugify": "^1.3.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
